[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "d400_ps3"
version = "0.1.0"
description = "D400 Problem Set 3"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "scipy",
  "ipywidgets",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
